feat(setup): complete phase 1 - project foundation without docus
- Removed Docus layer to resolve better-sqlite3 Windows build blocker
- Configured Nuxt 4 with @nuxt/ui v4, @nuxtjs/mdc, @nuxtjs/i18n
- Created custom documentation layout (app.vue, layouts/default.vue)
- Setup TailwindCSS v4 with green theme configuration
- Added AppLogo.vue component for branding
- Created homepage with package navigation cards
- Configured i18n routes (en/fr) for internationalization
- Updated package.json metadata and dependencies
- Build verified working (client & server built successfully)

--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "docus-starter",
+  "name": "zuno-marketplace-docs",
+  "version": "0.1.0",
+  "description": "Unified documentation for Zuno NFT Marketplace ecosystem",
   "scripts": {
-    "dev": "nuxt dev --extends docus",
-    "build": "nuxt build --extends docus"
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "docus": "latest",
-    "better-sqlite3": "^12.2.0",
+    "@iconify-json/lucide": "^1.2.75",
+    "@iconify-json/simple-icons": "^1.2.60",
+    "@nuxt/ui": "^4.2.1",
+    "@nuxtjs/mdc": "^0.18.4",
     "nuxt": "^4.1.2"
+  },
+  "devDependencies": {
+    "@nuxtjs/i18n": "latest"
   }
 }
