--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@iconify-json/simple-icons": "^1.2.60",
     "@nuxt/ui": "^4.2.1",
     "@nuxtjs/mdc": "^0.18.4",
-    "nuxt": "^4.1.2"
+    "@tailwindcss/vite": "^4.0.0-beta.10",
+    "nuxt": "^4.1.2",
+    "tailwindcss": "^4.0.0-beta.10"
   },
   "devDependencies": {
     "@nuxtjs/i18n": "latest"
