--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nuxt/ui": "^4.2.1",
     "@nuxtjs/mdc": "^0.18.4",
     "@tailwindcss/vite": "^4.0.0-beta.10",
+    "@vueuse/core": "^14.0.0",
     "nuxt": "^4.1.2",
-    "tailwindcss": "^4.0.0-beta.10"
+    "tailwindcss": "^4.0.0-beta.10",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@nuxtjs/i18n": "latest"
