--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
 
       - name: Lint
         run: pnpm run lint
+      
+      - name: Lint fix
+        run: pnpm lint:fix
 
       - name: Typecheck
         run: pnpm run typecheck
